# ylurm

./: CLAUDE.md  Cargo.toml  README.md
docs/: dev-log.md
src/: app.rs  main.rs
src/config/: mod.rs
src/slurm/: mod.rs  parser.rs
src/ui/: layout.rs
