[package]
name = "ylurm"
version = "0.1.0"
edition = "2024"
authors = ["Aram Dovlatyan"]
description = "A highly customizable TUI for the Slurm Workload Manager"
license = "MIT"
repository = "https://github.com/aramdovlatyan/ylurm"
keywords = ["slurm", "tui", "hpc", "cluster", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

# Concurrency & async
crossbeam = "0.8"

# File watching (log tailing)
notify = "8.0"

# Regex for squeue parsing
regex = "1.11"
lazy_static = "1.5"

# Utilities
itertools = "0.14"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
